Header section complete

--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Cormorant:wght@400;500;600;700&display=swap");
+    </style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Cormorant:wght@400;500;600;700&family=Poppins&display=swap");
+    </style>
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <link rel="stylesheet" href="css/style.css" />
+
     <title>Furniture</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <a href="#"><p class="logo-title">Furniture</p></a>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li>Home</li>
+          <li>Furniture</li>
+          <li>Lighting</li>
+          <li>Store</li>
+        </ul>
+      </nav>
+      <div class="nav-icons">
+        <a href="#">
+          <i class="ph-magnifying-glass icon"></i>
+        </a>
+        <a href="#">
+          <i class="ph-handbag-fill icon"></i>
+        </a>
+      </div>
+    </header>
+  </body>
 </html>
