Hero and featured section is complete

--- a/index.html
+++ b/index.html
@@ -35,5 +35,38 @@
         </a>
       </div>
     </header>
+    <main>
+      <!-- hero section  -->
+      <section class="hero-section flex">
+        <div class="text-box">
+          <h1>Filling the home with the beautiful creation of wood</h1>
+        </div>
+        <div class="img-box">
+          <picture>
+            <!-- <source srcset="img/hero.webp" type="image/webp" /> -->
+            <source srcset="img/hero.jpg" type="image/jpg" />
+
+            <img
+              src="./img/hero.jpg"
+              alt="A beatiful white chair with white table"
+            />
+          </picture>
+        </div>
+      </section>
+
+      <!-- featured section  -->
+      <section class="featured-section">
+        <div>
+          <p>Feautured in</p>
+          <div class="img-box flex">
+            <img src="img/logo/BangOlufsen.png" alt="Bang and olufsen logo" />
+            <img src="img/logo/BI.png" alt="Business insider logo" />
+            <img src="img/logo/decor.png" alt="Decor logo" />
+            <img src="img/logo/fastCompany.png" alt="Fast company logo" />
+            <img src="img/logo/Abstract.png" alt="Remodelista logo" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
